<resources>
    <string name="app_name">Vacmet</string>
    <string name="SignIn">SignIn</string>
    <string name="SignUp">SignUp</string>
    <string name="UserName">UserName</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Or">Or</string>
    <string name="Or_Login_via">Or Login Via</string>
    <string name="Or_Register_via">Or Register Via</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="Re_Enter_Password">Re Enter Password</string>
    <string name="Contact_Number">Mobile No.(For Verification)</string>
    <string name="Enter_OTP">Enter OTP</string>
    <string name="Approve">Approve</string>
    <string name="Please_Wait">Please wait...</string>
    <string name="User_Approved">User Approved.</string>
    <string name="username_not_correct">Username not matched with our records.</string>
    <string name="password_not_correct">Password not matched with the given user.</string>
    <string name="success_gmail">Gmail Account Successfully Logged In.</string>
    <string name="facebook_app_id">1864359833808688</string>
    <string name="EMAIL_SECURE">anubhavtest1493@gmail.com</string>
    <string name="PASS_SECURE">Anujuit_1268</string>
    <string name="password_not_match">Passwords do not match. Please Try Again..!</string>
    <string name="Search_order">Search</string>
    <string name="search_hint">Search via Party Name/Order No.</string>
    <string name="Order_No">"Order No: "</string>
    <string name="Order_Date">"Order Date: "</string>
    <string name="Order_Qty">Order Qty:</string>
    <string name="Order_Desp_Qty">Desp. Qty:</string>
    <string name="No_result_found">No Results found for your search query, Swipe Up to Try Again.</string>
    <string name="order_status">Order Status</string>
    <string name="party_name">"Party Name: "</string>
    <string name="Delivery_Date">"Delivery Date: "</string>
    <string name="otp_not_matched">Otp not matched.</string>
    <string name="Request_dispatch_date">"Request Dispatch Date: "</string>
    <string name="Quantity_Info">Quantity Info(For all items)</string>
    <string name="Order_Prod_Qty">"In Production: "</string>
    <string name="Item_Name">Item Name</string>
    <string name="despQty_OrderQty">Desp Qty/Order Qty[kg\'s]</string>
    <string name="despQty_OrderQtyHeader">Desp Qty/Order Qty</string>
    <string name="username_cannot_be_left_blank">Username cannot be left blank</string>
    <string name="password_cannot_be_left_blank">Password cannot be left blank</string>
    <string name="fetching_orders">Fetching orders from server...Please Wait!!</string>
    <string name="fetching_orders_locally">You are offline, fetching orders locally...Please Wait!!</string>
    <string name="fetching_items_in_order">Fetching Items in Order...Please Wait!!!</string>
    <string name="replacing_dot_in_firebase_db">(dot)</string>
    <string name="closed">closed</string>
    <string name="open_drawer">Open Menu</string>
    <string name="close_drawer">Menu Closed</string>
    <string name="client">Client</string>
    <string name="Server">Server</string>
    <string name="party">Party</string>
    <string name="Sales_executive">Sales Executive</string>
    <string name="sort_orders_by">Sort orders by:</string>
    <string name="open_orders">Orders</string>
    <string name="closed_orders">Dispatched Orders</string>
    <string name="orders">Orders</string>
    <string name="admin_console">Admin Console</string>
    <string name="update_records">Update Records</string>
    <string name="open">open</string>
    <string name="enter_sap_id">Enter SAP ID</string>
    <string name="No_records_found_for_this_query">No records found for this query.</string>
    <string name="item_details">Item Details</string>
    <string name="material_no">Material No:</string>
    <string name="bill_no">Bill No:</string>
    <string name="bill_date">Bill Date:</string>
    <string name="item_length">Length:</string>
    <string name="item_width">Width:</string>
    <string name="item_treatment1">Treatment1:</string>
    <string name="item_treatment2">Treatment2:</string>
    <string name="item_container_no">Container no:</string>
    <string name="item_shades">Shades(if any):</string>
    <string name="orderTransition">Order Transition</string>
    <string name="status_not_known">Status(Not known)</string>
    <string name="item_length_cumulative">Length(s)[mtrs]:</string>
    <string name="item_width_cumulative">Width(s)[mm]:</string>
    <string name="open_qty">Open Qty:</string>
    <string name="stock_left">(Stock left)</string>
    <string name="stock_qty">Stock Qty(s):</string>
    <string name="AdminPhoneNo">9837038752</string>
    <string name="requestingAuth">requesting the authorization for vacmet application.</string>
    <string name="adminEmails">dp@perfectsoftware.in,dp@imagesoft.co.in</string>
    <string name="invoice_no">"Invoice No: "</string>
    <string name="invoice_date">"Invoice Date: "</string>
    <string name="sales_order_no">Sales Order No:</string>
    <string name="delivery_status">Delivery Status</string>
    <string name="upload_invoices">Upload Invoices</string>
    <string name="toast_permissions_given">Permission Given</string>
    <string name="toast_insufficient_permissions">Insufficient Permissions</string>
    <string name="toast_images_added">Images added</string>
    <string name="cropImage_activityTitle">Crop Image :</string>
    <string name="toast_imagecropped">Image Cropped</string>
    <string name="toast_error_getCropped">Image can\'t be cropped</string>
    <string name="toast_no_images">No images selected</string>
    <string name="creating_pdf">Creating Pdf</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="example">9000012</string>
    <string name="toast_name_not_blank">Filename cannot be left blank</string>
    <string name="please_wait">Please Wait...</string>
    <string name="preparing_pdf">Preparing PDF!</string>
    <string name="saving_invoice_in_db">Saving Invoice in databse</string>
    <string name="securely_connecting_to_db">Securely connecting to database.</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_fingerprint">One-touch Sign In</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="note">(Fingerprint sign in makes your app login much faster. Your device should have at least one fingerprint registered in device settings)</string>
    <string name="title_activity_home">Fingerprint</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>
    <string name="switch_to_manual_password">Switch to manual password</string>
    <string name="refersh_order_action">action_referesh_vacmet_order</string>
    <string name="toast_playservices_unrecoverable">Your Device Does\'nt support Google Play Services, some features of this app, will not work.</string>
    <string name="user_access_job">user_access_job</string>
    <string name="user_offline_match">User not matches with the saved user profile.</string>
    <string name="network_refersh_job">network_refersh_job</string>
    <string name="database_error_msg_for_alert">Database Error!, Please Try Again with correct details, or contact Admins</string>
    <string name="network_error_msg_alert">Authentication to Server Failed! Please Try Again</string>
    <string name="lets_try_again">Let\'s Try Again!!</string>
    <string name="input_remarks">Enter Remarks</string>
    <string name="save_remark">Save Remark</string>
    <string name="dismiss_remark">Dismiss Remark</string>
    <string name="estimate_delivery_date">Estimated Delivery Date</string>
    <string name="remark_hint">Input Remark Here</string>
    <string name="first_time_offline_logine_msg">Oops! we could\'nt find you while you are offline!, please login once to access application offline features!</string>
    <string name="input_invoice_logistics_details">Input Invoice Logistics Details</string>
    <string name="input_bill_no">Input Bill No</string>
    <string name="e_t_a">E.T.A:</string>
    <string name="input_e_t_a">Input E.T.A</string>
    <string name="input_container_no">Input Container No</string>
    <string name="container_no">Container No:</string>
    <string name="input_vessel_no">Input Vessel No</string>
    <string name="vessel_no">Vessel No:</string>
    <string name="vacmet_logistics">Vacmet Logistics</string>
    <string name="save_logistics_data">Save Logistics Data</string>
    <string name="dismiss">Dismiss</string>
    <string name="data_cant_be_saved_in_firebase">Oops! your data can\'t be saved right now!</string>
    <string name="input_logistics_details">Provide Logistics Details For Invoice Here...</string>
    <string name="logistics_details">Logistics Details:</string>
    <string name="bl_no">BL No.:</string>
    <string name="input_bl_no">Input BL No</string>
    <string name="date_modification_split_key">(Modified)</string>
    <string name="prev_modified_dates">Previously Modified Schedules:</string>
    <string name="we_are_sorry_for_the_delay_we_are_working_to_deliver_you_at_the_earliest">(We are sorry for the delay, we are working to deliver you at the earliest)</string>
    <string name="logistics_awaited">Awaited</string>
    <string name="buyer_p_i_no">Buyer Order No:</string>
    <string name="buyer_p_i_date">Buyer Order Date:</string>
    <string name="customer_p_i_details">Customer P.I Details</string>
    <string name="p_i_no">P.I No:</string>
    <string name="p_i_date">P.I Date:</string>
    <string name="pi_eta">E.T.A:</string>
    <string name="sap_view_not_allowed_in_update_service">User is not allowed to access this SAP ID, please contact Admin</string>
    <string name="ETD">E.T.D :</string>
    <string name="specify_estimate">Specify Estimate Date</string>
    <string name="log_me_out">Log Me Out</string>
    <string name="visit_app_in_mail">Visit: www.vpipl.co.in/apps/</string>
    <string name="update_application">Update Application</string>
    <string name="update_application_to_access_new_features_of_app">Please update the application to access its new features.</string>
    <string name="update">Update!</string>
    <string name="data_cant_be_read_from_database">Data can\'t be read from database! Try Again!</string>
    <string name="actual_invoice_no">Actual Invoice No:</string>
    <string name="purchase_no">Purchase No:</string>
</resources>
