<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/logistics_alert_bg"
    android:padding="@dimen/d5"
    android:elevation="@dimen/d5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/vac_small"
            android:text="@string/input_invoice_logistics_details"
            android:textStyle="bold"
            android:drawablePadding="@dimen/d5"
            android:gravity="center"
            android:padding="@dimen/d5"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_blNo"
            android:orientation="horizontal"
            android:padding="@dimen/d5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bl_no"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/logisticsAlert_billNo"
                android:hint="@string/input_bl_no"
                android:textColor="@color/black"
                android:text=""
                android:textSize="@dimen/d15sp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_vesselNo"
            android:orientation="horizontal"
            android:padding="@dimen/d5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vessel_no"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/logisticsAlert_vessel"
                android:hint="@string/input_vessel_no"
                android:textColor="@color/black"
                android:text=""
                android:textSize="@dimen/d15sp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_container"
            android:orientation="horizontal"
            android:padding="@dimen/d5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/container_no"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/logisticsAlert_container"
                android:hint="@string/input_container_no"
                android:textColor="@color/black"
                android:text=""
                android:textSize="@dimen/d15sp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_eta"
            android:orientation="horizontal"
            android:padding="@dimen/d5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_t_a"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/logisticsAlert_eta"
                android:hint="@string/input_e_t_a"
                android:textColor="@color/black"
                android:text=""
                android:textSize="@dimen/d15sp"/>


        </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/d5"
          android:weightSum="10"
          android:orientation="horizontal">
          <Button
              android:layout_width="0dp"
              android:layout_weight="4.75"
              android:layout_height="wrap_content"
              android:id="@+id/logisticsAlert_positive"
              android:padding="@dimen/d5"
              android:text="@string/save_logistics_data"
              android:background="@color/charcoal"
              android:textAllCaps="false"/>
          <View
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="0.5"/>
          <Button
              android:layout_width="0dp"
              android:layout_weight="4.75"
              android:layout_height="wrap_content"
              android:id="@+id/logisticsAlert_negative"
              android:padding="@dimen/d5"
              android:text="@string/dismiss"
              android:background="@color/charcoal"
              android:textAllCaps="false"/>
      </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>



