<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:alpha="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_Name"
            android:weightSum="10"
            android:orientation="horizontal">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:id="@+id/et_firstName"
                android:layout_marginTop="15dp"
                android:imeOptions="actionNext"
                android:textColor="@color/black"
                android:nextFocusForward="@+id/et_lastName"
                android:singleLine="true"
                android:background="@drawable/et_sign_in"
                android:hint="@string/FirstName"
                android:gravity="center"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:id="@+id/et_lastName"
                android:imeOptions="actionNext"
                android:textColor="@color/black"
                android:nextFocusForward="@+id/et_Email"
                android:layout_marginTop="15dp"
                android:singleLine="true"
                android:background="@drawable/et_sign_in"
                android:hint="@string/LastName"
                android:gravity="center"/>

        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_Email"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/et_password"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:background="@drawable/et_sign_in"
            android:hint="@string/Email"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_Password"
            android:weightSum="10"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:id="@+id/et_password"
                android:textColor="@color/black"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/et_rePassword"
                android:singleLine="true"
                android:inputType="textPassword"
                android:background="@drawable/et_sign_in"
                android:hint="@string/Password"
                android:gravity="center"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:id="@+id/et_rePassword"
                android:imeOptions="actionNext"
                android:textColor="@color/black"
                android:nextFocusForward="@+id/et_Contact"
                android:singleLine="true"
                android:inputType="textPassword"
                android:background="@drawable/et_sign_in"
                android:hint="@string/Re_Enter_Password"
                android:gravity="center"/>

        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_Contact"
            android:layout_marginTop="5dp"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:textColor="@color/black"
            android:singleLine="true"
            android:background="@drawable/et_sign_in"
            android:hint="@string/Contact_Number"
            android:gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signUser"
            android:text="@string/SignUp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_sign_in"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/ll_orRegisterVia"
        android:weightSum="10">
        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="4"
            android:background="#a6a6a6"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Or_Register_via"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="#FFFFFF"/>
        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="4"
            android:background="#a6a6a6"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_gravity="center"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/google_signIn"
            android:src="@drawable/google"
            android:scaleType="fitCenter"
            android:layout_gravity="center"/>

    </LinearLayout>



</LinearLayout>