<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:id="@+id/ll_root_otp_layout"
    android:padding="25dp"
    android:alpha="1">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loader_layout"
        android:visibility="visible">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loader"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loader"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/Please_Wait"
            android:textColor="#FFFFFF"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/otp_layout"
        android:visibility="gone">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_otp"
            android:background="@drawable/et_sign_in"
            android:textColor="@color/black"
            android:hint="@string/Enter_OTP"
            android:inputType="number"
            android:singleLine="true"
            android:gravity="center"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_otp"
            android:textColor="@color/black"
            android:text="@string/Approve"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_sign_in"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/approved_user_layout"
        android:padding="10dp"
        android:visibility="gone">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/approved_login"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:src="@drawable/approved"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/approved_login"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/User_Approved"
            android:textColor="#FFFFFF"/>

    </RelativeLayout>


</LinearLayout>