<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/d30"
    android:layout_marginBottom="@dimen/d20"
    android:elevation="50dp"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/rlCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/partyName"
            android:gravity="right"
            android:padding="@dimen/d5"
            android:text="Party Name"
            android:textStyle="bold"
            android:textColor="#003C71"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_OrderNo"
            android:orientation="horizontal"
            android:layout_below="@id/partyName">
            <TextView
                android:id="@+id/tvOrderNoHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/d5"
                android:text="@string/Order_No"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvOrderNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/d5"
                android:textStyle="bold"
                android:textColor="#003C71"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_OrderDate"
            android:orientation="horizontal"
            android:layout_below="@id/ll_OrderNo">
            <TextView
                android:id="@+id/tvOrderDateHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/d5"
                android:text="@string/Order_Date"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvOrderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#003C71"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_OrderQty"
            android:orientation="horizontal"
            android:layout_below="@id/ll_OrderDate">
            <TextView
                android:id="@+id/tvOrderQtyHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/d5"
                android:text="@string/Order_Qty"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvOrderQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/d5"
                android:textStyle="bold"
                android:textColor="#003C71"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_OrderDespQty"
            android:orientation="horizontal"
            android:layout_below="@id/ll_OrderQty">
            <TextView
                android:id="@+id/tvOrderDespQtyHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/d5"
                android:text="@string/Order_Desp_Qty"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvOrderDespQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/d5"
                android:textStyle="bold"
                android:textColor="#003C71"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deliveryDate"
            android:gravity="right"
            android:padding="@dimen/d5"
            android:text="Delivery Date:"
            android:layout_below="@id/ll_OrderDespQty"
            android:textStyle="bold"
            android:textColor="#FF0000"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>